--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,7 +239,7 @@ button {
 * Color
 *********************/
 .bg-color--keycolor {
-  background-color: #EEEEEE;
+  background-color: #BBBBBB	;
 }
 
 .bg-color--subcolor {
