--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,7 +239,7 @@ button {
 * Color
 *********************/
 .bg-color--keycolor {
-  background-color: #EEEEEE;
+  background-color: #BBBBBB	;
 }
 
 .bg-color--subcolor {
@@ -284,7 +284,7 @@ button {
 }
 
 .section-title--keycolorlight {
-  background-color: #EEEEEE;
+  background-color:#BBBBBB	;
 }
 
 .section-title--keycolorlight .section-title__stage {
@@ -292,7 +292,7 @@ button {
 }
 
 .section-title--keycolor {
-  background-color:#EEEEEE;
+  background-color:#BBBBBB	;
 }
 
 .section-title--story {
